--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body, html{ height: 100%;}
 body {
 	padding-top: 50px;
-	background-color: #1976D2;
+	background-color: #226d3b;
 }
 
 #home {
@@ -26,8 +26,20 @@ body {
 	color: white;
 }
 h1, h2, h3, h4, h5, h6{
-	color: white;
+	color: gold;
+	font-family: "Lucida Sans Unicode", Lucida Grande, sans-serif;
+}
+p{
+	color: #c0c0c0;
+	font-size: 12pt;
+	font-family: "Times New Roman", Times, serif;
 }
 .badge {
 	color: gold;
+}
+.landing-title{
+	color: gold;
+}
+.list-group{
+	color: #018e30;
 }
