--- a/style.css
+++ b/style.css
@@ -1,81 +1,348 @@
-body, html{ height: 100%;}
-body {
-	padding-top: 50px;
-	background-color: #226d3b;
-	background: url("img/BG.jpg");
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:300,600');
+:root {
+  --dark_primary: rgba(56, 142, 60, .85);
+  --light_primary: rgb(200, 230, 201);
+  --light_primary_opa: rgba(200, 230, 201,.85);
+  --primary: rgb(76, 175, 80);
+  --accent: rgb(74, 226, 81);
+  --primary_text: rgb(33, 33, 33);
+  --secondary_text: rgb(117, 117, 117);
+  --divider: rgb(189, 189, 189);
+  --background: rgb(255, 255, 255);
+}
+*, *::before, *::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    outline: none;
 }
 
-#home {
-	height: 100%;
-	/*Horiztonally and vertically centering content"*/
-    text-align: center;
+body, html {
+    height: 100%;
+    background-color: var(--background);
+}
+
+body {
+	margin: 0;
+	background: var(--primary_text);
+	font-family: 'Work Sans', sans-serif;
+	font-weight: 400;
+}
+
+.home-section {
+  background-image: url('img/bg.jpg');
+  background-color: var(--background);
+  background-blend-mode: multiply;
+  background-size: cover;
+  display: grid;
+  place-items: center;
+  position: relative;
+}
+
+/*.about-section{}*/
+
+/* navigation styles start here */
+
+header {
+  background: var(--dark_primary);
+  text-align: center;
+  position: fixed;
+  z-index: 999;
+  width: 100%;
+}
+
+.nav-toggle {
+  display: none;
+}
+
+.logo{
+    color: white;
+    font-family: 'Work Sans';
+}
+
+.nav-toggle-label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-left: 1em;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.nav-toggle-label span,
+.nav-toggle-label span::before,
+.nav-toggle-label span::after {
+  display: block;
+  background: var(--background);
+  height: 2.4px;
+  width: 2em;
+  border-radius: 2px;
+  position: relative;
+}
+
+.nav-toggle-label span::before,
+.nav-toggle-label span::after {
+  content: '';
+  position: absolute;
+}
+
+.nav-toggle-label span::before {
+  bottom: 7px;
+}
+
+.nav-toggle-label span::after {
+  top: 7px;
+ }
+
+nav {
+  position: absolute;
+  text-align: left;
+  top: 100%;
+  left: 0;
+  background: var(--dark_primary);
+  width: 100%;
+  transform: scale(1, 0);
+  transform-origin: top;
+  transition: transform 400ms ease-in-out;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+nav li {
+  margin-bottom: 1em;
+  margin-left: 1em;
+  display: inline-block;
+  margin-left: 70px;
+  padding-top: 23px;
+  position: relative;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  opacity: 0;
+  position: relative;
+  transition: opacity 150ms ease-in-out;
+}
+
+nav a:hover {
+  color: var(--light_primary);
+}
+
+nav ul li a::before {
+	content: '';
+	display: block;
+	height: 5px;
+	width: 0%;
+	background-color: var(--accent);
+	position: absolute;
+	top: -.75em;
+	left: 0;
+	right: 0;
+	transform: scale(0,1);
+	transform-origin: left;
+	transition: transform ease-in-out 250ms;
+}
+
+nav ul li a:hover::before {
+	transform: scale(1,1);
+	width: 100%;
+}
+
+.nav-toggle:checked ~ nav {
+  transform: scale(1,1);
+}
+
+.nav-toggle:checked ~ nav a {
+  opacity: 1;
+  transition: opacity 250ms ease-in-out 150ms;
+}
+
+@media screen and (min-width: 800px) {
+  .nav-toggle-label {
+    display: none;
+  }
+
+  header {
+    display: grid;
+    grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr;
+  }
+
+  .logo {
+    grid-column: 2 / 3;
+  }
+
+  nav {
+    all: unset;
+    grid-column: 3 / 4;
     display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  nav ul {
+    display: flex;
+  }
+
+  nav li {
+    margin-left: 3em;
+    margin-bottom: 0;
+  }
+
+  nav a {
+    opacity: 1;
+    position: relative;
+  }
+
+  nav a::before {
+    content: '';
+    display: block;
+    height: 5px;
+    background: var(--accent);
+    position: absolute;
+    top: -.75em;
+    left: 0;
+    right: 0;
+    transform: scale(0, 1);
+    transform-origin: left;
+    transition: transform ease-in-out 250ms;
+  }
+
+  nav a:hover::before {
+    transform: scale(1,1);
+  }
+    
+  .contact-form{
+    flex-direction: column;
+  }
+    
+  .msg textarea{
+    height: 80px;
+  }
+    
+  .input-fields,
+  .msg{
+    width: 100%;
+  }
 }
-.jumbotron{
-	background-color: #FF5722;
-}
+
 .albert {
-	/*Horizontally centering the albert image*/
 	margin-left: auto;
 	margin-right: auto;
+    padding-bottom: 20px;
 }
+
+.container {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .landing-title {
-	font-size: 80px;
-	color: white;
+	margin-left: auto;
+    margin-right: auto;
+    padding-top: 90px;
+	font-size: 60px;
+	color: var(--dark_primary);
 }
+
 h1, h2, h3, h4, h5, h6{
-	color: gold;
-	font-family: "Lucida Sans Unicode", Lucida Grande, sans-serif;
+	color: var(--secondary_text);
 }
-p, address{
-	color: #c0c0c0;
+
+p{
+	color: var(--primary_text);
 	font-size: 12pt;
-	font-family: "Lucida Sans Unicode", Lucida Grande, sans-serif;
 }
+
 .badge {
-	color: gold;
+	color: var(--background);
+    background: var(--accent)
 }
+
 .landing-title{
-	color: gold;
-}
-.list-group{
-	color: #018e30;
-}
-a:link {
-    color: green;
-}
-
-/* visited link */
-a:visited {
-    color: green;
-}
-
-/* mouse over link */
-a:hover {
-    color: gold;
-}
-
-/* selected link */
-a:active {
-    color: blue;
-}
-.button {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 16px 32px;
+	color: var(--primary);
     text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
+}
+
+opening-container {
+    position: absolute;
+}
+
+.list-group{
+	color: var(--dark_primary);
+}
+
+*{
+
+}
+
+.wrapper{
+  width: 100%;
+  padding: 0 20px;
+}
+ 
+.contact-form{
+  display: flex;
+  max-width: 550px;
+  margin: 0 auto;
+  background: rgba(0,0,0,0.8);
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px var(--primary);
+}
+ 
+.input-fields{
+  display: flex;
+  flex-direction: column;
+  margin-right: 4%;
+}
+ 
+.input-fields,
+.msg{
+  width: 48%;
+}
+ 
+.input-fields .input,
+.msg textarea{
+  margin: 10px 0;
+  background: transparent;
+  border: 0px;
+  border-bottom: 2px solid #c5ecfd;
+  padding: 10px;
+  color: #c5ecfd;
+  width: 100%;
+}
+ 
+.msg textarea{
+  height: 212px;
+}
+ 
+::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
+  color: #c5ecfd;
+}
+::-moz-placeholder {
+  /* Firefox 19+ */
+  color: #c5ecfd;
+}
+:-ms-input-placeholder {
+  /* IE 10+ */
+  color: #c5ecfd;
+}
+ 
+.btn {
+    background: #39b7dd;
+    text-align: center;
+    padding: 15px;
+    border-radius: 5px;
+    color: #fff;
     cursor: pointer;
-}.button:hover {
-    background-color: #4CAF50; /* Green */
-    color: white;
+    text-transform: uppercase;
 }
