--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ nav ul li a:hover::before {
     height: 80px;
   }
     
-  .input-fields,
+  .fields,
   .msg{
     width: 100%;
   }
@@ -279,10 +279,6 @@ opening-container {
 	color: var(--dark_primary);
 }
 
-*{
-
-}
-
 .wrapper{
   width: 100%;
   padding: 0 20px;
@@ -295,28 +291,23 @@ opening-container {
   background: rgba(0,0,0,0.8);
   padding: 30px;
   border-radius: 5px;
-  box-shadow: 0 0 10px var(--primary);
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
 }
  
-.input-fields{
+.fields{
   display: flex;
   flex-direction: column;
   margin-right: 4%;
 }
  
-.input-fields,
-.msg{
-  width: 48%;
-}
- 
-.input-fields .input,
+.fields .input,
 .msg textarea{
   margin: 10px 0;
   background: transparent;
   border: 0px;
-  border-bottom: 2px solid #c5ecfd;
+  border-bottom: 2px solid var(--primary);
   padding: 10px;
-  color: #c5ecfd;
+  color: var(--primary);
   width: 100%;
 }
  
@@ -326,23 +317,24 @@ opening-container {
  
 ::-webkit-input-placeholder {
   /* Chrome/Opera/Safari */
-  color: #c5ecfd;
+  color: var(--dark_primary);
 }
 ::-moz-placeholder {
   /* Firefox 19+ */
-  color: #c5ecfd;
+  color: var(--dark_primary);
 }
 :-ms-input-placeholder {
   /* IE 10+ */
-  color: #c5ecfd;
+  color: var(--dark_primary);
 }
  
 .btn {
-    background: #39b7dd;
+    background: var(--primary);
     text-align: center;
     padding: 15px;
     border-radius: 5px;
     color: #fff;
     cursor: pointer;
     text-transform: uppercase;
+    width: 100%
 }
