--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 }
 
 .home-section {
-  background-image: url('img/bg.jpg');
+  background-image: url('img/bgg.jpg');
   background-color: var(--background);
   background-blend-mode: multiply;
   background-size: cover;
@@ -55,9 +55,21 @@ header {
   display: none;
 }
 
-.logo{
+.logo {
+    position: relative;
     color: white;
     font-family: 'Work Sans';
+}
+
+.media-links{
+    padding-top: 20px;
+    width: 700px ;
+    margin: 0  auto;
+}
+
+.li-img {
+    width: 35px;
+    height: 35px;
 }
 
 .nav-toggle-label {
@@ -337,4 +349,14 @@ opening-container {
     cursor: pointer;
     text-transform: uppercase;
     width: 100%
+}
+.LI-profile-badge {
+    padding-left: auto;
+    padding-right: auto;
+    text-align: center;
+}
+
+.bottom {
+    padding-top: 2.5em;
+    display: inline-block;
 }
